--- a/springBootMongo.yml
+++ b/springBootMongo.yml
@@ -1,141 +1,78 @@
-kind: ConfigMap
 apiVersion: v1
+kind: ReplicationController
 metadata:
-  name: springappconfigmap
-data:
-  username: springapp
-  password: mongodb@123
-
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: springappsecrets
-type: Opaque
-stringData:   # We can define multiple key value pairs.
-  password: devdb@123
-
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: pv-hostpath
+  labels:
+    name: springboot
+  name: spring-controller
 spec:
-  storageClassName: manual
-  capacity:
-    storage: 1Gi
-  accessModes:
-  - ReadWriteOnce
-  hostPath:
-    path: "/tmp/mongodata"
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: pvc-hostpath
-spec:
-  storageClassName: manual
-  accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Mi
-
----
-## Spring Boot App
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: springappdeployment
-spec:
-  replicas: 2
-  selector:
-    matchLabels:
-      app: springapp
+  replicas: 1
   template:
     metadata:
-      name: springapppod
       labels:
-        app: springapp
+        name: springboot
     spec:
       containers:
-      - name: springappcontainer
-        image: vijaybabu358/spring-boot-mongo
+      - image: vijaybabu358/spring-boot-mongo
+        name: springboot
         ports:
-        - containerPort: 8080
-        env:
-        - name: MONGO_DB_USERNAME
-          valueFrom:
-            configMapKeyRef:
-              name: springappconfigmap
-              key: username
-        - name: MONGO_DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: springappsecrets
-              key: password
-        - name: MONGO_DB_HOSTNAME
-          value: mongo
+        - name: springboot
+          containerPort: 8080
 ---
+#Node Port Service
 apiVersion: v1
 kind: Service
 metadata:
-  name: springapp
+  labels:
+    name: springboot
+  name: springboot  
 spec:
-  selector:
-    app: springapp
+  type: Nodeport
   ports:
-  - port: 80
+  - port: 8080
     targetPort: 8080
-  type: NodePort
----
-# Mongo db pod with volumes(HostPath)
-apiVersion: apps/v1
-kind: ReplicaSet
-metadata:
-  name: mongodbrs
-spec:
   selector:
-    matchLabels:
-      app: mongodb
-  template:
-     metadata:
-       name: mongodbpod
-       labels:
-         app: mongodb
+    name: springboot
+---
+# Mongo host path rc
+apiVersion: apps/v1
+kind: ReplicationController
+metadata:
+  labels:
+  name: mongo
+name: mongo-controller  
+spec:
+    replicas: 1
+    template:
+      metadata:
+        labels:
+          name: mongo
      spec:
-       volumes:
-       - name: mongodb-pvc
-         persistentVolumeClaim:
-           claimName: pvc-hostpath
        containers:
-       - name: mongodbcontainer
+       - name: mongo
          image: mongo
          ports:
-         - containerPort: 27017
-         env:
-         - name: MONGO_INITDB_ROOT_USERNAME
-           valueFrom:
-             configMapKeyRef:
-               name: springappconfigmap
-               key: username
-         - name: MONGO_INITDB_ROOT_PASSWORD
-           valueFrom:
-             secretKeyRef:
-               name: springappsecrets
-               key: password
+         - name: mongo
+           containerPort: 27017
+           hostport: 27017
          volumeMounts:
-         - name: mongodb-pvc
+         - name: mongo-persistance-storage
            mountPath: /data/db
+       volumes:
+       - name: mongo-persistance-storage
+         hostpath:
+          path: /tmp/backup         
 ---
+# Mongo Node Port RC
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    name: mongo
   name: mongo
 spec:
   type: ClusterIP
-  selector:
-    app: mongodb
   ports:
   - port: 27017
     targetPort: 27017
+selector:
+    name: mongo
